--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ComercioR"
         tools:targetApi="31">
         <activity
+            android:name=".TelaCarrinho"
+            android:exported="false" />
+        <activity
             android:name=".TelaRecSenha"
             android:exported="false" />
         <activity
@@ -24,7 +27,7 @@
         <activity
             android:name=".TelaProdutos"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
